fnd-002: add lifecycle metadata and sync conflict policies

--- a/docs/specs/FND-002.md
+++ b/docs/specs/FND-002.md
@@ -1,7 +1,7 @@
 # FND-002: Metadata Authoring Lifecycle Controls
 
 **Initiative ID:** FND-002  
-**Status:** Planned  
+**Status:** In Progress  
 **Phase:** Phase A (Foundation Stabilization)  
 **Last Updated:** 2026-02-20
 
@@ -49,13 +49,13 @@ Out of scope:
 
 Functional:
 
-- [ ] Sync rejects conflicting DataPoints unless resolution mode is provided.
-- [ ] Lifecycle metadata is captured and queryable for every update.
+- [x] Sync rejects conflicting DataPoints unless resolution mode is provided.
+- [x] Lifecycle metadata is captured and queryable for every update.
 
 Quality:
 
-- [ ] Conflict resolution paths have deterministic behavior and tests.
-- [ ] Audit entries are generated for create/update/override actions.
+- [x] Conflict resolution paths have deterministic behavior and tests.
+- [x] Audit entries are generated for create/update/override actions.
 
 ## 8. Test Plan
 
